--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,23 @@ on:
       - v[0-9]+.*
 
 jobs:
+  make-bump:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - run: echo "BUMP_VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+      - run: sed -i "/^\[package\]/,/^\[/{s/^version = \".*/version = \"$BUMP_VERSION\"/; t;}" Cargo.toml
+      - run: sed -i "s|\(/releases/tag/\)v[0-9.]*|\1v$BUMP_VERSION|" README.md
+      - run: sed -i "s|v[0-9.]*\.svg\([^)]*\)|v$BUMP_VERSION.svg\1|" README.md
+      - run: | 
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add .
+          git commit -m "chore(bump): Bumped to $BUMP_VERSION"
+          git push
+
   create-release:
+    needs: make-bump
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
