--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -22,7 +22,7 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "chore(bump): Bumped to $BUMP_VERSION"
-          git push
+          git push origin HEAD --follow-tags
 
   create-release:
     needs: make-bump
