--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,16 +4,20 @@ permissions:
   contents: write
 
 on:
-  push:
-    tags:
-      - v[0-9]+.*
+  workflow_dispatch:
+    inputs:
+      version:
+        description: 'Release version'     
+        required: true
 
 jobs:
-  make-bump:
+  make-bump-and-create-release:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - run: echo "BUMP_VERSION=${GITHUB_REF_NAME#v}" >> $GITHUB_ENV
+      - uses: actions/checkout@v6
+        with:
+          ref: master
+      - run: echo "BUMP_VERSION=${github.event.inputs.logLevel#v}" >> $GITHUB_ENV
       - run: sed -i "/^\[package\]/,/^\[/{s/^version = \".*/version = \"$BUMP_VERSION\"/; t;}" Cargo.toml
       - run: sed -i "s|\(/releases/tag/\)v[0-9.]*|\1v$BUMP_VERSION|" README.md
       - run: sed -i "s|v[0-9.]*\.svg\([^)]*\)|v$BUMP_VERSION.svg\1|" README.md
@@ -22,20 +26,14 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "chore(bump): Bumped to $BUMP_VERSION"
-          git push origin HEAD --follow-tags
-
-  create-release:
-    needs: make-bump
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
+          git push
       - uses: taiki-e/create-gh-release-action@v1.9.1
         with:
           changelog: CHANGELOG.md
           token: ${{ secrets.GITHUB_TOKEN }}
-
+          
   upload-assets:
-    needs: create-release
+    needs: make-bump-and-create-release
     strategy:
       matrix:
         include:
