--- a/.github/workflows/trigger_release.yml
+++ b/.github/workflows/trigger_release.yml
@@ -1,4 +1,4 @@
-name: Release
+name: Trigger Release
 
 permissions:
   contents: write
@@ -17,7 +17,10 @@ jobs:
       - uses: actions/checkout@v6
         with:
           ref: master
-      - run: echo "BUMP_VERSION=${{ github.event.inputs.version }}" >> $GITHUB_ENV
+      - run: |
+          VERSION="${{ github.event.inputs.version }}"
+          VERSION="${VERSION#v}"
+          echo "BUMP_VERSION=$VERSION" >> $GITHUB_ENV
       - run: sed -i "/^\[package\]/,/^\[/{s/^version = \".*/version = \"$BUMP_VERSION\"/; t;}" Cargo.toml
       - run: sed -i "s|\(/releases/tag/\)v[0-9.]*|\1v$BUMP_VERSION|" README.md
       - run: sed -i "s|v[0-9.]*\.svg\([^)]*\)|v$BUMP_VERSION.svg\1|" README.md
@@ -27,27 +30,5 @@ jobs:
           git add .
           git commit -m "chore(bump): Bumped to $BUMP_VERSION"
           git push
-      - uses: taiki-e/create-gh-release-action@v1.9.1
-        with:
-          changelog: CHANGELOG.md
-          token: ${{ secrets.GITHUB_TOKEN }}
-          
-  upload-assets:
-    needs: make-bump-and-create-release
-    strategy:
-      matrix:
-        include:
-          - target: x86_64-unknown-linux-gnu
-            os: ubuntu-latest
-          - target: x86_64-apple-darwin
-            os: macos-latest
-    runs-on: ${{ matrix.os }}
-    steps:
-      - uses: actions/checkout@v4
-      - uses: taiki-e/upload-rust-binary-action@v1.26.0
-        with:
-          bin: meowpdf
-          target: ${{ matrix.target }}
-          archive: $tag-$bin-$target
-          checksum: sha256
-          token: ${{ secrets.GITHUB_TOKEN }}
+          git tag ${{ github.event.inputs.version }}
+          git push origin --tags
