--- a/.github/workflows/trigger_release.yml
+++ b/.github/workflows/trigger_release.yml
@@ -17,6 +17,7 @@ jobs:
       - uses: actions/checkout@v6
         with:
           ref: master
+          ssh-key: "${{ secrets.COMMIT_KEY }}"
       - run: |
           VERSION="${{ github.event.inputs.version }}"
           VERSION="${VERSION#v}"
@@ -28,7 +29,7 @@ jobs:
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
-          git commit -m "chore(bump): Bumped to $BUMP_VERSION"
+          git commit -m "chore(bump): Bumped to ${{ github.event.inputs.version }}"
           git push
           git tag ${{ github.event.inputs.version }}
           git push origin --tags
