--- a/.github/workflows/trigger_release.yml
+++ b/.github/workflows/trigger_release.yml
@@ -30,5 +30,6 @@ jobs:
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git add .
           git commit -m "chore(bump): Bumped to ${{ github.event.inputs.version }}"
-          git tag ${{ github.event.inputs.version }}
           git push
+          git tag ${{ github.event.inputs.version }}
+          git push origin --tags
